# kdl-hs

./: .gitignore  .hooky.kdl  CHANGELOG.md  README.md  kdl-hs.cabal
.github/workflows/: ci.yml  release.yml
scripts/: kdl-test  release_notes.py
src/: KDL.hs
src/Data/: KDL.hs
src/Data/KDL/: Arrow.hs  Decoder.hs  Parser.hs  Render.hs  Types.hs
src/Data/KDL/Decoder/: Arrow.hs  DecodeM.hs  Error.hs  Monad.hs  Schema.hs
src/Data/KDL/Decoder/Arrow/: Internal.hs
src/Data/KDL/Decoder/Internal/: DecodeM.hs  Error.hs  Monad.hs
src/Data/KDL/Parser/: Hustle.hs
src/Data/KDL/Parser/Hustle/: Formatter.hs  Internal.hs  Parser.hs  Types.hs
src/KDL/: Applicative.hs  Arrow.hs  Decoder.hs  Parser.hs  Render.hs  Types.hs
src/KDL/Decoder/: Arrow.hs  Monad.hs  Schema.hs
src/KDL/Decoder/Internal/: DecodeM.hs  Decoder.hs  Error.hs  Monad.hs
src/KDL/Parser/: Hustle.hs  Internal.hs
src/KDL/Parser/Hustle/: Formatter.hs  Internal.hs  Parser.hs  Types.hs
test/: Main.hs  kdl-hs-test-decoder.hs
test/Data/KDL/: ParserSpec.hs
test/Data/KDL/Decoder/: ArrowSpec.hs  MonadSpec.hs
test/KDL/: ApplicativeSpec.hs  ComplianceSpec.hs  DecoderSpec.hs  ParserSpec.hs  RenderSpec.hs
test/KDL/Decoder/: ArrowSpec.hs  MonadSpec.hs
test/KDL/Decoder/SharedSpec/: Arrow.hs  Monad.hs  Template.hs
test/KDL/TestUtils/: AST.hs  Error.hs
test/KDL/__snapshots__/: DecoderSpec.snap.md  ParserSpec.snap.md  RenderSpec.snap.md
test/compliance-tests/: decoder.hs  download.sh
tools/: kdl-test
