cabal-version: 3.0

name: kdl-hs
version: 0.1.0
synopsis: KDL language parser and API
description: KDL language parser and API.
homepage: https://github.com/brandonchinn178/kdl-hs#readme
bug-reports: https://github.com/brandonchinn178/kdl-hs/issues
author: Brandon Chinn <brandonchinn178@gmail.com>
maintainer: Brandon Chinn <brandonchinn178@gmail.com>
license: BSD-3-Clause
license-file: LICENSE.md
category: Text
build-type: Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/kdl-hs

library
  hs-source-dirs: src
  exposed-modules:
    Data.KDL
    Data.KDL.Decoder
    Data.KDL.Decoder.Arrow
    Data.KDL.Decoder.Arrow.Internal
    Data.KDL.Decoder.Internal.DecodeM
    Data.KDL.Decoder.Internal.Error
    Data.KDL.Decoder.Monad
    Data.KDL.Decoder.Schema
    Data.KDL.Parser
    Data.KDL.Render
    Data.KDL.Types
  other-modules:
    Data.KDL.Parser.Hustle
    Data.KDL.Parser.Hustle.Formatter
    Data.KDL.Parser.Hustle.Internal
    Data.KDL.Parser.Hustle.Parser
    Data.KDL.Parser.Hustle.Types
  build-depends:
      base < 5
    , containers
    , megaparsec
    , prettyprinter >= 1.7.0
    , scientific
    , text
    , transformers
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

test-suite kdl-tests
  type: exitcode-stdio-1.0
  ghc-options: -F -pgmF=skeletest-preprocessor
  build-tool-depends: skeletest:skeletest-preprocessor
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Data.KDL.ParserSpec
    Data.KDL.Decoder.ArrowSpec
    Data.KDL.Decoder.MonadSpec
  build-depends:
      base
    , containers
    , kdl-hs
    , skeletest
    , temporary
    , text
  default-language: GHC2021
  ghc-options: -Wall -Wcompat
