cabal-version: 3.0

name: kdl-hs
version: 0.2.1
synopsis: KDL language parser and API
description: KDL language parser and API.
homepage: https://github.com/brandonchinn178/kdl-hs#readme
bug-reports: https://github.com/brandonchinn178/kdl-hs/issues
author: Brandon Chinn <brandonchinn178@gmail.com>
maintainer: Brandon Chinn <brandonchinn178@gmail.com>
license: BSD-3-Clause
license-file: LICENSE.md
category: Text
build-type: Simple
extra-source-files:
  README.md
  CHANGELOG.md
  test/KDL/__snapshots__/DecoderSpec.snap.md
  test/KDL/__snapshots__/ParserSpec.snap.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/kdl-hs

library
  hs-source-dirs: src
  exposed-modules:
    KDL
    KDL.Applicative
    KDL.Arrow
    KDL.Decoder
    KDL.Decoder.Arrow
    KDL.Decoder.Internal.DecodeM
    KDL.Decoder.Internal.Decoder
    KDL.Decoder.Internal.Error
    KDL.Decoder.Monad
    KDL.Decoder.Schema
    KDL.Parser
    KDL.Parser.Internal
    KDL.Render
    KDL.Types
  build-depends:
      base < 5
    , containers
    , data-default
    , megaparsec
    , prettyprinter >= 1.7.0
    , scientific
    , text
    , transformers
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

executable kdl-hs-test-decoder
  main-is: test/kdl-hs-test-decoder.hs
  build-depends:
      base < 5
    , aeson
    , bytestring
    , containers
    , kdl-hs
    , scientific
    , text
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

test-suite kdl-tests
  type: exitcode-stdio-1.0
  ghc-options: -F -pgmF=skeletest-preprocessor
  build-tool-depends:
    , skeletest:skeletest-preprocessor
    , kdl-hs:kdl-hs-test-decoder
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    KDL.ApplicativeSpec
    KDL.DecoderSpec
    KDL.Decoder.ArrowSpec
    KDL.Decoder.MonadSpec
    KDL.ParserSpec
    KDL.TestUtils.AST
    KDL.TestUtils.Error
  build-depends:
      base
    , containers
    , directory
    , filepath
    , kdl-hs
    , pretty-show
    , process
    , scientific
    , skeletest
    , temporary
    , text
  default-language: GHC2021
  ghc-options: -Wall -Wcompat
